| Summary: | ASTERISK-28544: Wrong contact representation in ipv6 mode | ||
| Reporter: | Jørgen H (jorgen) | Labels: | patch pjsip webrtc |
| Date Opened: | 2019-09-19 16:02:35 | Date Closed: | 2019-10-01 05:55:35 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 16.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Linux x64 | Attachments: | ( 0) 0001-res_pjsip_transport_websocket-Don-t-put-brackets-aro.patch |
| Description: | res/res_pjsip.c and ast_sip_create_dialog_uas quotes ipv6 addresses with brackets [] when generating the contact address.
The IP address is taken from transport local_name.host-variable which is already quoted with brackets by pjsip's pj_addr_str_print function. This result in Invalid URI and hangup errors when making a call in ipv6 mode | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-09-19 16:02:35.990-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Jørgen H (jorgen) 2019-09-26 09:13:44.060-0500 The bug happens constantly if you connect with webrtc. If it doesnt happen with sip, then there might be inconsistancy in how local_name.host is populated with the ip. By: Joshua C. Colp (jcolp) 2019-09-26 09:22:40.584-0500 That would mean the inconsistency is in res_pjsip_transport_websocket and isn't producing the value without the brackets as it should like the other transports. By: Sean Bright (seanbright) 2019-09-27 10:00:48.898-0500 [~jorgen], can you please try [^0001-res_pjsip_transport_websocket-Don-t-put-brackets-aro.patch] and let us know if it resolves the problem? (Sorry, I've had a few false starts, but I believe this patch is the correct fix) By: Jørgen H (jorgen) 2019-09-30 07:17:43.936-0500 Sean: Yes, that fix worked and also seem correct :) What to do next ? By: Sean Bright (seanbright) 2019-09-30 07:21:01.777-0500 [~jorgen], you can abandon your reviews. I've opened new reviews with the fix that you just tested: https://gerrit.asterisk.org/c/asterisk/+/12985 By: Sean Bright (seanbright) 2019-09-30 07:54:37.909-0500 [~jorgen], you should abandon all of them: https://gerrit.asterisk.org/c/asterisk/+/12970 https://gerrit.asterisk.org/c/asterisk/+/12974 https://gerrit.asterisk.org/c/asterisk/+/12975 By: Friendly Automation (friendly-automation) 2019-10-01 05:55:36.757-0500 Change 12987 merged by Friendly Automation: res_pjsip_transport_websocket: Don't put brackets around local_name if IPv6 [https://gerrit.asterisk.org/c/asterisk/+/12987|https://gerrit.asterisk.org/c/asterisk/+/12987] By: Friendly Automation (friendly-automation) 2019-10-01 06:34:21.282-0500 Change 12985 merged by George Joseph: res_pjsip_transport_websocket: Don't put brackets around local_name if IPv6 [https://gerrit.asterisk.org/c/asterisk/+/12985|https://gerrit.asterisk.org/c/asterisk/+/12985] By: Friendly Automation (friendly-automation) 2019-10-01 06:34:46.514-0500 Change 12986 merged by George Joseph: res_pjsip_transport_websocket: Don't put brackets around local_name if IPv6 [https://gerrit.asterisk.org/c/asterisk/+/12986|https://gerrit.asterisk.org/c/asterisk/+/12986] By: Friendly Automation (friendly-automation) 2019-10-01 06:35:08.793-0500 Change 12988 merged by George Joseph: res_pjsip_transport_websocket: Don't put brackets around local_name if IPv6 [https://gerrit.asterisk.org/c/asterisk/+/12988|https://gerrit.asterisk.org/c/asterisk/+/12988] | ||