res_pjsip_transport_websocket: Don't put brackets around local_name if IPv6

ASTERISK-28544 #close

Change-Id: I8e62c444d107674c298f472e3545661de8a80dce